--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@vitejs/plugin-react": "^1.1.4",
         "postcss": "^8.4.6",
         "postcss-preset-env": "^7.3.1",
+        "prettier": "^2.6.2",
         "vite": "^2.7.2"
     }
 }
